--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ article.title|striptags }} | {{ super() }}{% endblock title %}
+{% block title %}Archives{% endblock title %}
 
 {% block content %}
 
