--- a/templates/article.html
+++ b/templates/article.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ article.title|striptags }} | {{ super() }}{% endblock title %}
+{% block title %}| {{ article.title|striptags }} | {{ super() }}{% endblock title %}
 
 {% block content %}
 
