--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-    {% block head %)
-    <title>{% block title %}{{ SITENAME }} {{ TAGLINE }}{% endblock title %}<</title>
+    {% block head %}
+    <title>{{ SITENAME }} {% block title %}{% endblock title %} {{ TAGLINE }}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><script src="/theme/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="/theme/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="/theme/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="/theme/css/ie9.css" /><![endif]-->
     {% if FEED_RSS %}
         <link href="{{ FEED_DOMAIN }}/{{ FEED_RSS }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }}-Feed" />
     {% endif %}
@@ -22,19 +22,22 @@
 				<div id="header">
 
 					<!-- Logo -->
-          <h1>{{ SITENAME }} {{ TAGLINE }}</h1>
+          <h2>{{ SITENAME }}</h2>
 
 					<!-- Nav -->
 						<nav id="nav">
               <ul>
-             {% for cat, articleids in categories %}
-                <li {% if cat == category %}class="active"{% endif %}>
-                <a href="/category/{{ cat|lower }}.html">{% if CATEGORYICONS[cat] %}<span class="icon fa-{{CATEGORYICONS[cat]}}"></span>{% endif %}
-                  {{ cat }}</a><ul>
-                    {% for articleid in articleids %}
-                    <li><a href="/{{ articleid|lower }}.html">{{ articleid }}</li>
+             {% for cat, arts in categories %}
+                <li{% if cat == category %} class="current"{% endif %}>
+                <a href="/category/{{ cat|lower }}.html">
+                  {{ cat }}</a>
+                {% if cat != 'events' and cat != 'news' %}
+                  <ul>
+                    {% for art in arts %}
+                    <li><a href="/{{ art.url}}">{{ art.title }}</a></li>
                     {% endfor %}
                     </ul>
+                {% endif %}
                  </li>
               {% endfor %}
 							</ul>
@@ -61,12 +64,12 @@
     {% include 'footer.html' %}
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="/theme/js/jquery.min.js"></script>
+			<script src="/theme/js/jquery.dropotron.min.js"></script>
+			<script src="/theme/js/skel.min.js"></script>
+			<script src="/theme/js/util.js"></script>
+			<!--[if lte IE 8]><script src="/theme/js/ie/respond.min.js"></script><![endif]-->
+			<script src="/theme/js/main.js"></script>
 
 	</body>
 </html>
